--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -1,5 +1,76 @@
 @import "~bootstrap/scss/bootstrap.scss";
 
+
+.container-fluid{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+.top{
+background-color: black;
+    width: 15px;
+    height: 150px;
+    
+}
+.container_traffic{
+  display: flex;
+    background-color: black;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    width: 130px;
+    height: 350px;
+    border-radius: 20px;
+}
+.red{
+   background-color: red;
+    width: 100px;
+    height: 100px;
+    border-radius: 100%;
+    cursor: pointer;
+  
+}
+.orange{
+   background-color: orange;
+    width: 100px;
+    height: 100px;
+    border-radius: 100%;
+    cursor: pointer;
+}
+.green{
+   background-color: green;
+    width: 100px;
+    height: 100px;
+    border-radius: 100%;
+    cursor: pointer;
+}
+.orangeShadow{
+       background-color: orange;
+    width: 100px;
+    height: 100px;
+    border-radius: 100%;
+    cursor: pointer;
+    box-shadow: 0px 0px 100px 40px white;
+}
+.greenShadow{
+  background-color: green;
+    width: 100px;
+    height: 100px;
+    border-radius: 100%;
+    cursor: pointer;
+    box-shadow: 0px 0px 100px 40px white;
+
+}
+.redShadow{
+ background-color: red;
+    width: 100px;
+    height: 100px;
+    border-radius: 100%;
+    cursor: pointer;
+     box-shadow: 0px 0px 100px 40px white;
+}
+
+
 /* 
 
     You can write your own styles here...
