--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -10,6 +10,7 @@
 background-color: black;
     width: 15px;
     height: 150px;
+    margin-top: 5%;
     
 }
 .container_traffic{
@@ -70,7 +71,12 @@ background-color: black;
      box-shadow: 0px 0px 100px 40px white;
 }
 
+.shadow{
 
+box-shadow: 0px 0px 100px 40px white;
+
+
+}
 /* 
 
     You can write your own styles here...
